--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ beforescript:
 
 script:
 - echo "Preparing version $TRAVIS_BRANCH-$TRAVIS_COMMIT"
+- git clone https://github.com/KxSystems/ml.git
 - tar czf automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz *.q requirements.txt  LICENSE README.md
 - echo "Packaged as automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.zip"
 -  if [[ "x$QLIC_KC" != "x" ]]; then
