--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,8 +35,8 @@ USER kx
 
 RUN . /opt/conda/etc/profile.d/conda.sh \
 	&& conda activate kx \
-	&& conda install --file /opt/kx/automl/requirements.txt
-	&& conda clean -y --all \
+	&& conda install --file /opt/kx/automl/requirements.txt \
+	&& conda clean -y --all 
 
 USER root
 
