--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ deploy:
   provider: releases
   api_key: "$GITHUB_APIKEY"
   file_glob: true
-  file: ml_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz
+  file: automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz
   skip_cleanup: true
   on:
     tags: true
