--- a/.travis.yml
+++ b/.travis.yml
@@ -4,41 +4,53 @@ os:
 - osx
 git:
   depth: 1
+
 install:
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://repo.continuum.io/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh
-  -O miniconda.sh; else wget https://repo.continuum.io/miniconda/Miniconda3-4.5.4-MacOSX-x86_64.sh
-  -O miniconda.sh; fi
-- bash miniconda.sh -b -p $HOME/miniconda
-- export PATH="$HOME/miniconda/bin:$PATH"
-- hash -r
-- conda config --set always_yes yes --set changeps1 no
-- conda update -q conda
-- conda info -a
-- if [ $TRAVIS_OS_NAME = linux ]; then QLIBDIR=l64; elif [ $TRAVIS_OS_NAME = osx ];
-  then QLIBDIR=m64; else echo "unknown OS ('$TRAVIS_OS_NAME')" >&2; exit 1; fi; export
-  QLIBDIR
-- conda install -c kx embedPy
-- cp -r $(conda info --base)/q q && export QHOME=$(pwd)/q && export PATH=$QHOME/$QLIBDIR:$PATH
-- if [[ "x$QLIC_KC" != "x" ]]; then echo -n $QLIC_KC |base64 --decode > q/kc.lic;
-  pip -q install -r requirements.txt; fi
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-4.5.4-MacOSX-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - if [ $TRAVIS_OS_NAME = linux ]; then QLIBDIR=l64; elif [ $TRAVIS_OS_NAME = osx ]; then QLIBDIR=m64; else echo "unknown OS ('$TRAVIS_OS_NAME')" >&2; exit 1; fi; export QLIBDIR
+  - conda install -c kx embedPy # grab kdb+ and embedPy with conda
+  - cp -r $(conda info --base)/q q && export QHOME=$(pwd)/q && export PATH=$QHOME/$QLIBDIR:$PATH
+  # grab latest embedpy
+  - if [[ "x$QLIC_KC" != "x" ]]; then
+      echo -n $QLIC_KC |base64 --decode > q/kc.lic;
+      pip -q install -r requirements.txt;
+    fi
 beforescript:
-- IMPLEMENTATION=$(if [[ "x$TRAVIS_TAG" == "x" ]]; then echo $TRAVIS_BRANCH-$TRAVIS_COMMIT;
-  else echo $TRAVIS_TAG; fi;)
-- perl -p -i -e 's/AUTOMLVERSION/`\$\"'${IMPLEMENTATION}'\"/g' ml.q
+  - IMPLEMENTATION=$(if [[ "x$TRAVIS_TAG" == "x" ]]; then echo $TRAVIS_BRANCH-$TRAVIS_COMMIT; else echo $TRAVIS_TAG; fi;)
+  - perl -p -i -e 's/AUTOMLVERSION/`\$\"'${IMPLEMENTATION}'\"/g' automl.q
+
 script:
 - echo "Preparing version $TRAVIS_BRANCH-$TRAVIS_COMMIT"
 - git clone https://github.com/KxSystems/ml.git
-- tar czf automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz *.q requirements.txt  LICENSE
-  README.md
+- tar czf automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz *.q requirements.txt  LICENSE README.md
 - echo "Packaged as automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.zip"
-- |-
-  if [[ "x$QLIC_KC" != "x" ]]; then curl -fsSL -o test.q https://github.com/KxSystems/embedpy/raw/master/test.q; q test.q code/tests/ -q;
-  else echo No kdb+, no tests; fi
+-  if [[ "x$QLIC_KC" != "x" ]]; then
+    curl -fsSL -o test.q https://github.com/KxSystems/embedpy/raw/master/test.q;
+    q test.q code/tests/ -q;
+
+  else
+    echo No kdb+, no tests;
+  fi
+
+
 deploy:
   provider: releases
   api_key: "$GITHUB_APIKEY"
   file_glob: true
-  file: ml_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz
+  file: automl_$TRAVIS_OS_NAME-$TRAVIS_BRANCH.tgz
   skip_cleanup: true
   on:
     tags: true
